== 2.2.0.rc1 / 2012-09-21
* Use neo4j-core and neo4j-wrapper version 2.2.0.rc1
* Use the neo4j-cypher gem

== 2.0.1 / 2012-06-06
* Use neo4j-core and neo4j-wrapper version 2.0.1

== 2.0.0 / 2012-05-07
  (same as rc2)

== 2.0.0.rc2 / 2012-05-04
* Enable Identity Map by default
* Added versioning for Neo4j::Core

== 2.0.0.rc1 / 2012-05-03
* Fix of rake task to upgrade to 2.0
* Various Cypher DSL improvements, core(#3,#4,#5), #196
* Added Neo4j::VERSION

== 2.0.0.alpha.9 / 2012-04-27
* Fix for rails scaffold generator

== 2.0.0.alpha.8 / 2012-04-27
* Fix for "relationship to :all assigned twice for single instance" #178
* Fix for callback fire more then once (=> performance increase) #172
* Support for lucene search on array properties, #118
* Support for creating unique entities (get_or_create) #143
* Support for specifying has_n/has_one relationship with Strings instead of Class #160
* Support for serializer of hash and arrays on properties #185
* Fix for Neo4j::Rails::Relationship default property, #195
* Added support for pagination, see the neo4j-will_paginate gem
* Fixed Rails generators
* Added Cypher DSL support for is_a?
* Fix for "write_attribute persistes, contrary to AR convention" closes #182

== 2.0.0.alpha.7 / 2012-04-19
* fix for Neo4j::Config bug - did not work from rails to set the db location, closes #191
* has_n and has_one method generate class method returning the name of the relationship as a Symbol, closes #170
* Raise exception if trying to index boolean property, closes #180
* Made start_node= and end_node= protected closes 186
* Support for things like @dungeon.monsters.dangerous { |m| m[:weapon?] == 'sword' } closes #181

== 2.0.0.alpha.6 / 2012-04-15
* Complete rewrite and smaller change of API + lots of refactoring and better RSpecs
* Moved code to the neo4j-core and neo4j-wrapper gems
* Changed API - index properties using the Neo4j::Rails::Model (property :name, :index => :exact)
* Changed API - rel_type always returns a Symbol